# Bot-MM-01-Exchange-v1

./: .env.example  .gitignore  LICENSE  README.md  launcher.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.bat  test_markets.py
config/: default.toml
docs/: SUMMARY.md  VPS_GUIDE.md  disclaimer.md  faq.md  getting-started.md  introduction.md
docs/features/: risk-management.md  security.md
docs/strategies/: hyper-volume.md  optimized-be.md  overview.md
scripts/: build_nuitka.py  build_pyinstaller.py  cancel_all.py  check_sol.py  fetch_history.py  pnl.py  pnl_json.py  portfolio_backtest.py  run_backtest.py  run_paper.py  start_live_only.py
src/: __init__.py  cli.py  config.py
src/api/: __init__.py  client.py  websocket.py
src/backtest/: engine.py  market_maker.py  optimizer.py  report.py
src/dashboard/: app.py
src/dashboard/static/: app.js  index.html  style.css
src/heatmap/: __init__.py  engine.py
src/indicators/: core.py
src/live/: run_multi.py  trader.py
src/risk/: manager.py
src/strategy/: grid.py  regime.py  signals.py
